<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Material Bookmark - minimal</string>
    <string name="action_settings">settings</string>

    <string name="links_tab_name">bookmarks</string>
    <string name="import_export_tab_name">import/export</string>
    <string name="terms_and_licences">terms and licence</string>
    <string name="search_hint">type bookmark name</string>

    <string name="FLURRY_API_KEY">KQ2Y8SXVGPBSKY9BCYW8</string>
    <string name="ANDROID_FEEDBACK_KEY">AF-EB325C27D659-03</string>
    <string name="banner_ad_unit_id">ca-app-pub-3777798024824179/7880605447</string>
    <string name="main_title">Bookmarks</string>
    <string name="setting_rate_label">Rate us on Play Store</string>
    <string name="setting_url_search_label">Search on URL</string>
    <string name="setting_find_icon_label">Find icon automatically</string>
    <string name="setting_delete_all_label">Delete all bookmarks</string>
    <string name="setting_feedback_label">Send a feedback</string>
    <string name="setting_build_version_label">Build version</string>
    <string name="send_feedback_email">tunnus.android@gmail.com</string>
    <string name="bookmark_list_title">Material Bookmarks</string>
    <string name="https_checkbox_label">HTTPS</string>
    <string name="search_label">SEARCH</string>
    <string name="save_new_bookmark">SAVE BOOKMARK</string>
    <string name="url_hint">url...</string>
    <string name="title_hint">title...</string>
    <string name="no_network_connection">Oh Snap! No network available!</string>
    <string name="no_item_found">Oh Snap! We did\'nt find anything!</string>
    <string name="setting_url_search_description">extend search on bookmark URL and title.</string>
    <string name="setting_delete_all_description" >clear all your stored bookmarks.</string>
    <string name="not_implemented_yet">Sorry. Feature not implemented yet.</string>
    <string name="import_export_menu_label">import/export</string>
    <string name="deleted_menu_label">delete</string>
    <string name="share_menu_label">share</string>
    <string name="share_to">share bookmark to...</string>
    <string name="wrong_url">Oh snap! Wrong url typed:</string>
    <string name="cannot_load_url">Oh Snap! I can\'t load current Url.</string>
    <string name="import_from_google_keep">Import from Google Keep</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="import_from_your_account">Import from your account</string>
    <string name="dismiss_label">DISMISS</string>
    <string name="notify_label">NOTIFY</string>
    <string name="youll_be_notified">You\'ll be notified as soon as this feature will be up!</string>
    <string name="settings_all_bookmarks_has_been_deleted">Bookmarks deleted with success!</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete all your bookmarks?</string>
    <string name="delete_dialog_label">Delete bookmarks!</string>
    <string name="delete_button_label">DELETE</string>
    <string name="export_feature">Export!</string>
    <string name="export_description">Now you can export the bookmark list on Download folder.</string>
    <string name="export_button_label">EXPORT</string>
    <string name="bookmark_list_label">Bookmark list</string>
    <string name="import_menu_label">import</string>
    <string name="export_dialog_title">Export</string>
    <string name="no_bookmarks_here">No Bookmarks</string>
    <string name="open">OPEN</string>
    <string name="downloaded_with_error">Oh Snap! Download failed.</string>
    <string name="downloaded_with_success">Bookmarks exported with success!</string>
    <string name="select_all_menu_label">select all</string>
    <string name="gridview_resize">gridview resize</string>
    <string name="import_default_bookmarks">Import default bookmarks as Chrome and Firefox does</string>
    <string name="default_bookmarks">Default Bookmarks</string>
    <string name="setting_no_favicon_description">Disable favicon on each bookmark</string>
    <string name="setting_no_favicon">Default icon</string>
    <string name="accept">accept</string>
    <string name="decline">decline</string>
    <string name="setting_cloud_sync_description">Store your bookmarks over Cloud</string>
    <string name="setting_cloud_sync">Cloud Sync</string>
    <string name="setting_actionbar_title">Settings</string>
    <string name="add_new_bookmark_title">Add new</string>
    <string name="generic_error_message">Ops! Something went wrong!</string>
    <string name="setting_night_mode_description">Enabling night mode</string>
    <string name="setting_day_mode">Day Mode</string>
    <string name="setting_night_mode">Night Mode</string>
    <string name="no_title">No title</string>
    <string name="action_add_folder">add folder</string>
    <string name="select_folder">Select Folder</string>
    <string name="up_folder">up folder</string>
    <string name="search_bookmark">Search bookmarks</string>
    <string name="paste_clipboard">PASTE</string>
    <string name="available_soon">Available soon</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="offer_me_coffee">Offer me a coffee</string>
    <string name="export_bookmarks">Export Bookmarks</string>
    <string name="guest_user">Guest</string>
    <string name="send_feedback_label">Send me a feedback</string>
    <string name="export_bookmarks_success">Bookmarks exported with success!</string>
    <string name="action_about">About</string>
    <string name="search_empty_label">Ops. No result found: %s</string>
    <string name="extra_feature">Extra Features</string>
    <string name="general">General</string>
    <string name="empty_folder">Empty folder name</string>
    <string name="add_folder">Add new folder</string>
    <string name="bookmarks_stored">bookmarks stored!</string>
    <string name="folder_bookmark">Selected Folder</string>
    <string name="selected_folder">Selected folder</string>
    <string name="preview">PREVIEW</string>
    <string name="handle_permission">Would you add Write External Permission?</string>
</resources>
