<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addBookmarkCardLayoutId"
    android:layout_margin="@dimen/padding_16">
    <RelativeLayout
        android:id="@+id/addBookmarkMainContainerLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16">

        <!---move in a view-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/addBookmarkUrlTextInputId"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/TextInputLayoutStyle">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/urlEditTextId"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:imeOptions="actionSend"
                android:maxLines="3"
                android:hint="@string/url_hint">
            </android.support.v7.widget.AppCompatEditText>
        </android.support.design.widget.TextInputLayout>

        <ViewSwitcher
            android:id="@+id/toggleNameViewSwitcherId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addBookmarkUrlTextInputId"
            android:background="?attr/selectableItemBackground"
            android:layout_alignParentRight="true">
            <ImageView
                android:layout_width="@dimen/small_icon_size"
                android:layout_height="@dimen/small_icon_size"
                style="@style/AddBookmarkSearchBoxCollapseIcons"/>
            <ImageView
                android:layout_width="@dimen/small_icon_size"
                android:layout_height="@dimen/small_icon_size"
                style="@style/AddBookmarkSearchBoxExpandIcons"/>
        </ViewSwitcher>
        <Button
            android:layout_below="@id/addBookmarkUrlTextInputId"
            android:id="@+id/pasteClipboardFabId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_100"
            android:text="@string/paste_clipboard"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addBookmarkTitleTextInputId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@id/toggleNameViewSwitcherId"
            style="@style/TextInputLayoutStyle">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/titleEditTextId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/title_hint"
                android:maxLength="50"
                android:maxLines="2"/>
        </android.support.design.widget.TextInputLayout>
        <CheckBox
            android:id="@+id/addBookmarkHttpsCheckboxId"
            android:layout_below="@id/addBookmarkTitleTextInputId"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16"
            android:text="@string/https_checkbox_label"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>