<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/emptyLinkListViewId"
    android:visibility="gone"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <android.support.design.card.MaterialCardView
        android:id="@+id/importDefaultBookmarksCardviewId"
        android:layout_margin="@dimen/padding_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_16"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16">
            <TextView
                android:id="@+id/importDefaultTitleId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_20"
                android:textColor="@color/indigo_600"
                android:text="@string/default_bookmarks"/>
            <TextView
                android:id="@+id/importDefaultDescriptionId"
                android:paddingTop="@dimen/padding_2"
                android:layout_below="@id/importDefaultTitleId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/grey_900"
                android:text="@string/import_default_bookmarks"/>

            <TextView
                android:id="@+id/importDefaultBookmarksButtonId"
                android:background="?attr/selectableItemBackground"
                android:layout_below="@id/importDefaultDescriptionId"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/padding_8"
                android:layout_marginBottom="@dimen/padding_8"
                android:padding="@dimen/padding_8"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold"
                android:textColor="@color/indigo_600"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="IMPORT"/>
        </RelativeLayout>
    </android.support.design.card.MaterialCardView>
    <RelativeLayout
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <ImageView
            android:id="@+id/noBookmarkIconId"
            android:layout_centerHorizontal="true"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_cloud_off_black_48dp"/>
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_below="@id/noBookmarkIconId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_bookmarks_here"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/indigo_400"/>
    </RelativeLayout>
</RelativeLayout>
